--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
   
             <div class="container">
               <figure class="image__container">
-                <img src="assets/images/iOS の画像 (5).jpg" alt="">
+                <img src="assets/images/My Post (1).png" alt="">
               </figure>
                 
  <!--  YouTube貼り付け
