--- a/final.html
+++ b/final.html
@@ -23,8 +23,8 @@
       <div class="container">
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">全ステージ クリア！</h2>
-          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、先生を救うことができた！<br>
-            そして先生からあるメッセージが伝えられた・・・</p>
+          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、利用者を救い出すことができた！<br>
+            そしてハッカーからこんなメッセージが届いた・・・</p>
         </div>
       </div>
     </section>
@@ -42,7 +42,7 @@
             </div>
 Youtube貼り付けここまで-->
       </div>
-        <p class="text-center">あなたはきっと、このメッセージをずっと忘れることはないだろう・・・。<br>
+        <p class="text-center">・・・。<br>
           これからも家庭科室が封鎖されるようなことがあったら、<br>
           この教訓をしっかり思い出してくれ。</p>
         <p class="text-center">それでは、また会おう！</p>
@@ -63,8 +63,7 @@ Youtube貼り付けここまで-->
             <div class="card">
               <h3 class="card__title">このゲームの企画者</h3>
               <p class="card__content">企画・制作メンバーの紹介など。<br>
-                テキストテキストテキストテキストテキストテキストテキスト<br>
-                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                チーム名駅L</p>
             </div>
           </div>
         </div>
