--- a/final.html
+++ b/final.html
@@ -62,8 +62,11 @@ Youtube貼り付けここまで-->
           <div class="column">
             <div class="card">
               <h3 class="card__title">このゲームの企画者</h3>
-              <p class="card__content">企画・制作メンバーの紹介など。<br>
-                チーム名駅L</p>
+              <p class="card__content">名駅キャンパスLチーム<br>
+                　サイト：牧野和道<br>
+                　　ナゾ：福岡ゆず<br>
+                デザイン：小栗詩音
+                　　　　　細江結葉</p>
             </div>
           </div>
         </div>
