--- a/final.html
+++ b/final.html
@@ -65,7 +65,7 @@ Youtube貼り付けここまで-->
               <p class="card__content">名駅キャンパスLチーム<br>
                 　サイト：牧野和道<br>
                 　　ナゾ：福岡ゆず<br>
-                デザイン：小栗詩音
+                デザイン：小栗詩音<br>
                 　　　　　細江結葉</p>
             </div>
           </div>
