--- a/main.html
+++ b/main.html
@@ -35,8 +35,9 @@
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>図書館のシステムに侵入しよう！</h2>
             <p class="text-center">図書館のシステムのパスワードを知らなければ侵入することができない。<br>
-              下の画像の謎を解き、パスワードをキーワード欄に入力しよう。</p>
-            <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
+              下の画像の謎を解き、パスワードをキーワード欄に入力しよう。<br>
+            問題は”カタカナ”で入力してください</p>
+            <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう　</p>
   
             <div class="container">
               <figure class="image__container">
@@ -106,10 +107,11 @@ Youtube貼り付けここまで -->
         <section>
           <div class="section">
             <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
-              <p class="text-center">家庭科室に入ることができた！<br>
-                すぐに目に入ったのは黒板にある４つの謎。<br>
-                これらを解くことで、きっと次のステップに繋がるはずだ！</p>
+              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>ハッカーからの攻撃を阻止しよう！</h2>
+              <p class="text-center">システムに侵入することができた！システムを復旧させようと思ったその時・・・<br>
+                侵入したことが犯人にばれてしまったようだ！！！<br>
+                謎を解いて、犯人からの攻撃を阻止しよう。<br>
+                ※問題は”ひらがな”で回答してください。</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -197,10 +199,10 @@ Youtube貼り付けここまで -->
         <!-- STAGE3-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
-            <p class="text-center">黒板から得たメッセージは、「食物の廃棄問題」だった。<br>
-              どうやら、廃棄にかかる費用がかかりすぎて小学校の運営が厳しくなったようだ。。<br>
-              これらを解決するための最後の謎を解いていこう！</p>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>システムを復旧させよう</h2>
+            <p class="text-center">犯人からの攻撃を阻止することができた<br>
+              あとはシステムを復旧させ、利用者を救出するだけだ！<br>
+              そのために、最後の謎を解いていこう！</p>
             <figure class="image__container">
               <img src="assets/images/My Post (2).png" alt="">
             </figure>
