--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>図書館のシステムに侵入しよう！</h2>
             <p class="text-center">図書館のシステムのパスワードを知らなければ侵入することができない。<br>
               下の画像の謎を解き、パスワードをキーワード欄に入力しよう。<br>
-            問題は”カタカナ”で入力してください</p>
+            ※回答は”カタカナ”で入力してください</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう　</p>
   
             <div class="container">
@@ -111,7 +111,7 @@ Youtube貼り付けここまで -->
               <p class="text-center">システムに侵入することができた！システムを復旧させようと思ったその時・・・<br>
                 侵入したことが犯人にばれてしまったようだ！！！<br>
                 謎を解いて、犯人からの攻撃を阻止しよう。<br>
-                ※問題は”ひらがな”で回答してください。</p>
+                ※回答は”ひらがな”で回答してください。</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -183,8 +183,8 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
-              <div class="clear-message__content">黒板の指示に従い、<br>
-                次のステージの謎を解こう！</div>
+              <div class="clear-message__content">システムを復旧させて、<br>
+                利用者を館内から脱出させよう！</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -201,8 +201,9 @@ Youtube貼り付けここまで -->
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>システムを復旧させよう</h2>
             <p class="text-center">犯人からの攻撃を阻止することができた<br>
-              あとはシステムを復旧させ、利用者を救出するだけだ！<br>
-              そのために、最後の謎を解いていこう！</p>
+              あとはシステムを復旧させ、利用者を脱出させるだけだ！<br>
+              そのために、最後の謎を解いていこう！<br>
+            　※回答は”ひらがな”で入力してください。</p>
             <figure class="image__container">
               <img src="assets/images/My Post (2).png" alt="">
             </figure>
