--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             ホワイトハッカーとして働いている自分の元へ、警察から依頼の連絡が来た<br>
             その内容は、<br>
             「都内にある、R図書館の防犯システムが何者かにハッキングされてしまった。<br>
-            館内には利用者が閉じ込められている。防犯システムを復旧させて利用者を救い出してほしい」<br>
+            館内には利用者が閉じ込められている。防犯システムを復旧させて利用者を脱出させてほしい」<br>
             というものだった。<br>
             R図書館は、都内にある日本で最も規模の大きな図書館で、<br>
             蔵書数、利用者数、共に日本一である。<br>
@@ -71,7 +71,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">遊ぶ日時を決めよう！</h3>
-              <p class="card__content">前後の説明、解説をあわせ、想定所要時間は100分〜120分です。途中で中断することもできますが、お時間に余裕があるときにご参加ください。</p>
+              <p class="card__content">前後の説明、解説をあわせ、想定所要時間は３０分〜６０分です。途中で中断することもできますが、お時間に余裕があるときにご参加ください。</p>
             </div>
           </div>
           <div class="column">
@@ -91,30 +91,29 @@
     </section>
     <section class="section bg-color--keycolor">
       <div class="container">
-        <h2 class="section-title">複数人での遊び方</h2>
+        <h2 class="section-title">遊び方</h2>
         <p class="font-eng text-center">Playing games with multiple players</p>
         <div class="row">
           <div class="column">
             <div class="card">
-              <h3 class="card__title">コミュニケーションツール<br>を用意！</h3>
-              <p class="card__content">例：Zoom、LINE通話など<br>
-                カメラはオフにしたままでも参加は可能です。<br>
-                ただ、離れたところにいる仲間と同じ会場で謎解きをしている気持ちになれるので、カメラをオンにしてみんなでわいわいプレイをすることをお勧めします。</p>
+              <h3 class="card__title">回答の仕方は<br>問題により異なります！</h3>
+              <p class="card__content">”ひらがな”で回答する問題と<br>
+                ”カタカナ”で回答する問題があります<br>
+                各問題文にそれぞれ記載されているので、よく読んで謎解きしてくださいね！</p>
             </div>
           </div>
           <div class="column">
             <div class="card">
-              <h3 class="card__title">イヤホンを使おう！</h3>
-              <p class="card__content">本ゲームでは、登場人物が会話する動画を見ながら謎解きをします。<br>
-                動画を見るときにイヤホンを使うと、動画の再生中も仲間と会話をしながらプレイができます。<br>
-                ※イヤホンを使用しない場合は、音声をマイクが拾ってしまわないように、動画の再生中は通話ツールのミュート機能をご利用ください。</p>
+              <h3 class="card__title">紙とペンが必要です！</h3>
+              <p class="card__content">メモをしないと難しい問題が含まれます！<br>
+                必要なことはメモをとりながら謎解きを進めてくださいね！</p>
             </div>
           </div>
           <div class="column">
             <div class="card">
-              <h3 class="card__title">情報共有はしっかりと！</h3>
-              <p class="card__content">遠くにいる仲間と足並みを揃えて遊びましょう。<br>
-                動画で気になったところ、解けた謎の答えや思いついたことはなんでも共有しましょう！</p>
+              <h3 class="card__title">問題がわからない場合</h3>
+              <p class="card__content">ヒントが用意されているので<br>
+                難しい場合はヒントを頼ってください！</p>
             </div>
           </div>
         </div>
