--- a/main.html
+++ b/main.html
@@ -199,7 +199,7 @@ Youtube貼り付けここまで -->
         <!-- STAGE3-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>システムを復旧させよう</h2>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>システムを復旧させよう！</h2>
             <p class="text-center">犯人からの攻撃を阻止することができた<br>
               あとはシステムを復旧させ、利用者を脱出させるだけだ！<br>
               そのために、最後の謎を解いていこう！<br>
