--- a/final.html
+++ b/final.html
@@ -42,10 +42,10 @@
             </div>
 Youtube貼り付けここまで-->
       </div>
-        <p class="text-center">・・・。<br>
-          これからも家庭科室が封鎖されるようなことがあったら、<br>
-          この教訓をしっかり思い出してくれ。</p>
-        <p class="text-center">それでは、また会おう！</p>
+        <p class="text-center">それでも関係ない人を巻き込んではいけない・・・。<br>
+          でも反省しているみたいだし、今回は許してあげよう</p>
+        <p class="text-center">謎を解いてくれてありがとう！<br>
+          それでは、また会おう！</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
