--- a/main.html
+++ b/main.html
@@ -134,6 +134,7 @@ Youtube貼り付けここまで -->
                   <figure class="image__container">
                     <img src="assets/images/My Post (5).png" alt="">
                   </figure>
+                  <h2 class="section-title"><span class="section-title__stage">STAGE：2</span>キーワードを入力</h2>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
                   <answer-input v-bind:correct="correctAnswer['stage2']['q1']" v-on:answer-input="answerInput($event, 'stage2', 1)"></answer-input>
