--- a/main.html
+++ b/main.html
@@ -114,7 +114,7 @@ Youtube貼り付けここまで -->
                 ※回答は”ひらがな”で回答してください。</p>
             </div>
           </div>
-          <div class="stage-column__container section bg-color--keycolor">
+          <div class="stage-column__container">
             <div class="container">
               <!-------------------------------------------------------------
                 class名"row"内のclass名"column"が横並びになります。
