--- a/main.html
+++ b/main.html
@@ -141,6 +141,7 @@ Youtube貼り付けここまで -->
                   <a class="link-hint" href="hint2.html" target="hint2">ヒントをみる ></a>
                   <!-- STAGE2-1解答入力セクション　ここまで -->
                 </div><!-- /.column -->
+                  </section>
                 <!-- STAGE2-1　ここまで -->
 
 <!-- STAGE2-2 を追加
