--- a/final.html
+++ b/final.html
@@ -43,7 +43,7 @@
 Youtube貼り付けここまで-->
       </div>
         <p class="text-center">それでも関係ない人を巻き込んではいけない・・・。<br>
-          でも反省しているみたいだし、今回は許してあげよう</p>
+          まあ、反省しているみたいだし今回は許してあげよう</p>
         <p class="text-center">謎を解いてくれてありがとう！<br>
           それでは、また会おう！</p>
       </div>
