--- a/main.html
+++ b/main.html
@@ -137,6 +137,8 @@ Youtube貼り付けここまで -->
                   <h2 class="section-title"><span class="section-title__stage">STAGE：2</span>キーワードを入力</h2>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
+                   <section class="section bg-color--keycolor">
+          <div class="container">
                   <answer-input v-bind:correct="correctAnswer['stage2']['q1']" v-on:answer-input="answerInput($event, 'stage2', 1)"></answer-input>
                   <a class="link-hint" href="hint2.html" target="hint2">ヒントをみる ></a>
                   <!-- STAGE2-1解答入力セクション　ここまで -->
