--- a/final.html
+++ b/final.html
@@ -63,10 +63,10 @@ Youtube貼り付けここまで-->
             <div class="card">
               <h3 class="card__title">このゲームの企画者</h3>
               <p class="card__content">名駅キャンパスLチーム<br>
-                　サイト：牧野和道<br>
-                　　ナゾ：福岡ゆず<br>
-                デザイン：小栗詩音<br>
-                　　　　　細江結葉</p>
+                　サイト：ルックさん<br>
+                　　ナゾ：Y<br>
+                デザイン：ここ<br>
+                　　　　　　　　ゆゆ</p>
             </div>
           </div>
         </div>
