--- a/main.html
+++ b/main.html
@@ -131,8 +131,10 @@ Youtube貼り付けここまで -->
                 <div class="column">
                   <!-- STAGE2-1問題セクション　ここから -->
                   <figure class="image__container">
-                    <img src="assets/images/stage.png" alt="">
+                    <img src="assets/images/My Post (5).png" alt="">
                   </figure>   
+                </div>
+        </section>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
         <section class="section bg-color--keycolor">
