--- a/main.html
+++ b/main.html
@@ -154,7 +154,7 @@ Youtube貼り付けここまで -->
           </div>
         </section>
                   <!-- STAGE2-1解答入力セクション　ここまで -->
-                </div><!-- /.column -->
+                <!-- /.column -->
                 <!-- STAGE2-1　ここまで -->
 
 <!-- STAGE2-2 を追加
