--- a/main.html
+++ b/main.html
@@ -133,28 +133,38 @@ Youtube貼り付けここまで -->
                   <figure class="image__container">
                     <img src="assets/images/My Post (5).png" alt="">
                   </figure>   
-                </div>
-              </section>
+                </div><!-- /.column -->
+            </div>    
+          </div>      
                   <!-- STAGE2-1問題セクション　ここまで -->
-                  <!-- STAGE2-1解答入力セクション　ここから -->
-        <section class="section bg-color--keycolor">
-          <div class="container">
-            <h2 class="section-title"><span class="section-title__stage">STAGE：2</span>キーワードを入力</h2>
-            <!------------------------------------------------------------------------------------------------------------
-              解答入力欄のコンポーネントです。入力欄・送信ボタン・エラーメッセージを表示します。
-              v-bind:correct="correctAnswer['stage1']['q1']" は正解の解答を指します。
-              v-on:answer-input="answerInput($event, 'stage1', 1)" は送信ボタンをクリックした時の動作を決める関数です。
-              2番目、3番目の1引数 'stage1', 1 はstage1の1問目ということになります。
-              1番麺の引数 $event は正解、不正解の判定を受け取る変数です。
-              []、()の間違い、''の抜けがあると動きません。
-            ------------------------------------------------------------------------------------------------------------>
-            <answer-input v-bind:correct="correctAnswer['stage2']['q1']" v-on:answer-input="answerInput($event, 'stage2', 1)"></answer-input>
-
-            <a class="link-hint" href="hint2.html" target="hint2">ヒントをみる ></a>
-          </div>
-        </section>
-                  <!-- STAGE2-1解答入力セクション　ここまで -->
-                <!-- /.column -->
+              <!-------------------------------------------------------------
+                class名"row"内のclass名"column"が横並びになります。
+                改行する場合は以下のように追加してください。
+                <div class="row">
+                  <div class="column">
+                    ～ 内容 ～
+                  </div>
+                </div>
+              ------------------------------------------------------------->
+              <div class="row">
+                
+                <!-- STAGE2-1解答入力セクション　ここから -->
+                <section class="section bg-color--keycolor">
+                  <div class="container">
+                    <h2 class="section-title"><span class="section-title__stage">STAGE：2</span>キーワードを入力</h2>
+                    <!------------------------------------------------------------------------------------------------------------
+                      解答入力欄のコンポーネントです。入力欄・送信ボタン・エラーメッセージを表示します。
+                      v-bind:correct="correctAnswer['stage1']['q1']" は正解の解答を指します。
+                      v-on:answer-input="answerInput($event, 'stage1', 1)" は送信ボタンをクリックした時の動作を決める関数です。
+                      2番目、3番目の1引数 'stage1', 1 はstage1の1問目ということになります。
+                      1番麺の引数 $event は正解、不正解の判定を受け取る変数です。
+                      []、()の間違い、''の抜けがあると動きません。
+                    ------------------------------------------------------------------------------------------------------------>
+                    <answer-input v-bind:correct="correctAnswer['stage2']['q1']" v-on:answer-input="answerInput($event, 'stage2', 1)"></answer-input>
+                    <a class="link-hint" href="hint2.html" target="hint2">ヒントをみる ></a>
+                  </div>
+                </section>
+                <!-- STAGE2-1解答入力セクション　ここまで -->
                 <!-- STAGE2-1　ここまで -->
 
 <!-- STAGE2-2 を追加
@@ -189,8 +199,6 @@ Youtube貼り付けここまで -->
 
               </div><!-- /.row -->
 
-            </div>
-          </div>
         </section>
 
         <!-- STAGE2クリア画面　ここから -->
